--- a/index.html
+++ b/index.html
@@ -159,5 +159,8 @@
 <body class="bg-slate-50 dark:bg-gray-900 text-slate-900 dark:text-slate-100 transition-colors duration-300">
   <div class="aurora-bg"></div>
   <div id="root"></div>
+
+  <script type="module" src="/index.tsx"></script>
+  
 </body>
 </html>
